--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
 </head>
 <body>
     <ul>
-        <li>Vagrant</li>
-        <li>Docker</li>
-        <li>Ansible</li>
+        <li>Git</li>
+        <li>GitHub</li>
+        <li>Repositório</li>
         <li>Integraçã Contínua</li>
     </ul>
 </body>
