--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <li>Git</li>
         <li>GitHub</li>
         <li>Repositório</li>
-        <li>Integraçã Contínua</li>
+        <li>Integração Contínua</li>
     </ul>
 </body>
 </html>
