--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
         <li>GitHub</li>
         <li>Repositório</li>
         <li>Integração Contínua</li>
+        <li>JavaScript</li>
     </ul>
 </body>
 </html>
